# kgtool

./: IMPACT.md  INDEX.md  LICENSE  QUICKSTART.md  README.md  SHOWCASE.md  START_HERE.md  WORKFLOW.md  pyproject.toml  showcase_demo.py  visualize_graph.py
kgtool/: __init__.py  cli.py  pipeline.py
showcase_output/: backend_context.md  discovered_topics.json  frontend_context.md  infrastructure_context.md  topics_human_readable.json
showcase_output/knowledge_graph/: graph.json
showcase_output/knowledge_graph/nodes/: node_0.md  node_1.md  node_10.md  node_11.md  node_12.md  node_13.md  node_14.md  node_15.md  node_16.md  node_17.md  node_18.md  node_19.md  node_2.md  node_20.md  node_21.md  node_22.md  node_23.md  node_24.md  node_25.md  node_26.md  node_27.md  node_28.md  node_29.md  node_3.md  node_30.md  node_31.md  node_32.md  node_4.md  node_5.md  node_6.md  node_7.md  node_8.md  node_9.md
tests/: __init__.py  conftest.py  test_benchmarks.py  test_chunking.py  test_context_extraction.py  test_edge_cases.py  test_graph_building.py  test_topic_discovery.py
tests/data/: chaotic_mess.md  enterprise_architecture_spec.md  extreme_stress_test.md  sample_spec.md
tests/data/edge_cases/: mixed_one_liner.md  no_headings.md  tiny_backend.md  tiny_frontend.md
tests/gold/: topic_terms_enterprise.json
